--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script>
     function redirecionar() {
       // Altere a URL abaixo para o site que deseja redirecionar
-      window.location.href = "HeadSpace\\Home\\home.html";
+      window.location.href = "Home\\home.html";
     }
   </script>
 </body>
