--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <meta charset="UTF-8">
   <title>Redirecionamento</title>
   <script>
-    window.location.href = "HeadSpace\\Home\\home.html";
+    window.location.href = "Home\\home.html";
   </script>
 </head>
 <body>
-  <p>Se o redirecionamento não ocorrer, <a href="HeadSpace\\Home\\home.html">clique aqui</a>.</p>
+  <p>Se o redirecionamento não ocorrer, <a href="Home\\home.html">clique aqui</a>.</p>
 </body>
 </html>
